# MusiDoodle

./: .gitignore  README.md  Track  test.tr
docs/: Designs.fig  Designs08Jan.fig  architecture.md  buildinstructions.md
docs/0.0.2 Docs/html/: annotated.html  annotated_dup.js  chordselector_8h_source.html  classChordSelector-members.html  classChordsComponentCreator.html  classLyricsComponentCreator.html  classMainWindow-members.html  classMainWindow.html  classNewComponentPicker-members.html  classNewComponentPicker.html  classTrackEditorWindow.html  classTrackEditorWindow.js  classes.html  componentfactory_8h_source.html  doxygen.css  files.html  files_dup.js  functions.html  hierarchy.html  hierarchy.js  mainwindow_8h_source.html  newcomponentpicker_8h_source.html  trackeditorwindow_8h_source.html
docs/0.0.2/html/: classChordSelector.html  classChordSelector.js  classChordsComponentCreator-members.html  classComponentFactory-members.html  classComponentFactory.html  classLyricsComponentCreator-members.html  classNotebookComponentCreator-members.html  classNotebookComponentCreator.html  classSheetMusicComponentCreator-members.html  classSheetMusicComponentCreator.html  classTabComponentCreator-members.html  classTabComponentCreator.html  classTrackEditorWindow-members.html  doxygen_crawl.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js
docs/DoxygenLatest/html/: annotated.html  chordselector_8h_source.html  classChordSelector-members.html  classChordSelector.html  classChordsComponentCreator-members.html  classChordsComponentCreator.html  classComponentFactory-members.html  classComponentFactory.html  classLyricsComponentCreator-members.html  classLyricsComponentCreator.html  classMainWindow-members.html  classMainWindow.html  classMusicData-members.html  classMusicData.html  classNewComponentPicker-members.html  classNewComponentPicker.html  classNotebookComponentCreator-members.html  classNotebookComponentCreator.html  classSheetMusicComponentCreator-members.html  classSheetMusicComponentCreator.html  classTabComponentCreator-members.html  classTabComponentCreator.html  classTrackEditorWindow-members.html  classTrackEditorWindow.html  classes.html  componentfactory_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+11 more)
src/: CMakeLists.txt  chordselector.cpp  chordselector.h  component.cpp  component.h  componentfactory.cpp  componentfactory.h  dragwidget.cpp  dragwidget.h  dropwidget.cpp  dropwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  musicdata.cpp  musicdata.h  newcomponentpicker.cpp  newcomponentpicker.h  newcomponentpicker.ui  trackeditorwindow.cpp  trackeditorwindow.h  trackeditorwindow.ui
src/Components/: chordselector.cpp  chordselector.h
src/MusiDoodle/: CMakeLists.txt  component.cpp  component.h  componentfactory.cpp  componentfactory.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newcomponentpicker.cpp  newcomponentpicker.h  newcomponentpicker.ui  trackeditorwindow.cpp  trackeditorwindow.h  trackeditorwindow.ui
src/QTUiFiles/: newcomponentpicker.ui  trackeditorwindow.ui
src/Screens/: mainwindow.cpp  newcomponentpicker.cpp  newcomponentpicker.h  trackeditorwindow.cpp  trackeditorwindow.h
src/Utils/: dropwidget.cpp  dropwidget.h  iserializable.cpp  iserializable.h  tracksavedata.h
tests/: chord_selector_tests.cc
untitled/: mainwindow.ui
(+19 files in other folders)
